# Nephesh_Ephemera

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  dreaming.py  expansion-plan.md  heartbeat.py  mcp-compliance-plan.md  opencode.jsonc  pyproject.toml  run_server.sh
docs/: HEARTBEAT_V5_SPEC.md  MEMORY_REBUILD_SPEC.md  SEEDING.md  SPEC.md
scripts/: rebuild_load.py  runpod_bootstrap_remote.sh  runpod_deploy.sh  snapshot.py  stress_test.py
src/mcp_experiments/: __main__.py  activity.py  compliance.py  config.py  scheduler.py  server.py  web_ui.py
src/mcp_experiments.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcp_experiments/tools/: __init__.py  memory.py  openclaw_background.py  openclaw_sync.py  vector_db.py
