[project]
name = "mcp-experiments"
version = "2.1.2"
description = "Weekend project exploring MCP with vector DB, Slack, ClickUp, and email integrations"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "lancedb>=0.12.0",
    "pyarrow>=15.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-experiments = "mcp_experiments.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
