[project]
name = "nephesh"
version = "1.2.0"
description = "MCP server for instantiating living AI entities — persistent memory and continuity of self"
requires-python = ">=3.12"
license = "GPL-2.0-only"
dependencies = [
    "mcp[cli]>=1.0.0",
    "lancedb>=0.12.0",
    "pyarrow>=15.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nephesh = "mcp_experiments.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
